# Neon

./: .clang-format  .gitignore  404.html  CMakeLists.txt  LICENSE.txt  README.md  VerifyNeonPRUnix.sh  VerifyNeonPRWindows.bat  index.html  mkdocs.yml  sitemap.xml  webDocumentation.sh
apps/lbmMultiRes/: CMakeLists.txt  README.md  coalescence.h  collide.h  explosion.h  flowOverCylinder.h  flowOverShape.h  flowOverSphere.h  fusedFinest.h  init.h  lattice.h  lbmMultiRes.cu  lbmMultiRes.h  lidDrivenCavity.h  plot.py  postProcess.h  run.sh  store.h  stream.h  util.h  verify.h
apps/lbmMultiRes/lid/: run.sh
apps/lbmMultiRes/scripts/: plot.py
apps/lbmMultiRes/sphere/: run.sh
apps/poisson/: CMakeLists.txt  poisson.cu
benchmarks/lbm-flow-over-sphere/: CMakeLists.txt  run.sh
benchmarks/lbm-flow-over-sphere/src/: CellType.h  D3Q19.h  LbmContainers.h  LbmSkeleton.h  Metrics.h  Report.cpp  Report.h  RunTwoPop.cu  app.cpp  problemSetup.h
benchmarks/lbm-lid-driven-cavity-flow/: CMakeLists.txt  lbm-lid-driven-cavity-flow.py  lbm-lid-driven-cavity-flow.sh  run.sh
benchmarks/lbm-lid-driven-cavity-flow/src/: CellType.h  Config.cpp  Config.h  ContainerFactory.h  ContainersD3Q19.h  ContainersD3Q27.h  D3Q19.h  D3Q27.h  DeviceD3Q19.h  DeviceD3Q27.h  LbmIteration.h  LbmSkeleton.h  LbmTools.h  LbmToolsTemplateOnly.h  Methods.h  Metrics.h  Repoert.h  Report.cpp  RunCavityTwoPop.cpp  RunCavityTwoPop.cu  RunCavityTwoPop.h  app.cpp
libNeonCore/: CMakeLists.txt
libNeonCore/include/Neon/core/: core.h
libNeonCore/python/: visualize_graph.py
libNeonCore/src/core/tools/: Logger.cpp  Report.cpp
libNeonCore/src/core/types/: Access.cpp  Allocator.cpp  DataUse.cpp  DataView.cpp  DeviceType.cpp  Exceptions.cpp  Execution.cpp  MemoryLayout.cpp  MemoryOptions.cpp  SetIdx.cpp  memSetOptions.cpp  mode.cpp
libNeonCore/tests/: CMakeLists.txt
libNeonCore/tests/unit/: CMakeLists.txt
libNeonCore/tests/unit/coreUt_chrono/: CMakeLists.txt
libNeonCore/tests/unit/coreUt_cli/: CMakeLists.txt
libNeonCore/tests/unit/coreUt_digraph/: CMakeLists.txt
libNeonCore/tests/unit/coreUt_exceptions/: CMakeLists.txt
libNeonCore/tests/unit/coreUt_io/: CMakeLists.txt
libNeonCore/tests/unit/coreUt_logging/: CMakeLists.txt
libNeonCore/tests/unit/coreUt_tools/: CMakeLists.txt
libNeonCore/tests/unit/coreUt_tuple3d/: CMakeLists.txt
libNeonDomain/: CMakeLists.txt
libNeonDomain/include/Neon/domain/: Grids.h  StaggeredGrid.h  aGrid.h  bGrid.h  bGridDisg.h  bGridDisgBlockMask.h  bGridDisgMask.h  bGridMgpuDisg.h  dGrid.h  dGridSoA.h  eGrid.h  grid.md  mGrid.h  sGrid.h
libNeonDomain/src/domain/details/: haloUpdateType.cpp
libNeonDomain/src/domain/interface/: GridBase.cpp  Stencil.cpp  kernelConfig.cpp  launchConfig.cpp
libNeonDomain/src/domain/internal/: haloUpdateType.cpp
libNeonDomain/src/domain/patterns/: PatternScalar.cpp
libNeonDomain/src/domain/tools/: Geometries.cpp  Partitioner1D.cpp  SpaceCurves.cpp  TestData.cpp
libNeonDomain/tests/: CMakeLists.txt
libNeonDomain/tests/domain-bGrid-tray/: CMakeLists.txt
libNeonDomain/tests/domain-bGrid-tray/src/: gtests.cpp
libNeonDomain/tests/domain-globalIdx/: CMakeLists.txt
libNeonDomain/tests/domain-globalIdx/src/: globalIdx.cu  globalIdx.h  gtests.cpp  runHelper.h
libNeonDomain/tests/domain-halos/: CMakeLists.txt
libNeonDomain/tests/domain-halos/src/: halos.cu  halos.h
libNeonDomain/tests/domain-host-containers/: CMakeLists.txt
libNeonDomain/tests/domain-host-containers/src/: gtests.cpp  hostContainer.cpp  hostContainer.h  runHelper.h
libNeonDomain/tests/domain-map/: CMakeLists.txt
libNeonDomain/tests/domain-map-disg/: CMakeLists.txt
libNeonDomain/tests/domain-map-disg/src/: TestInformation.h  gtests.cpp  map.cu  map.h  runHelper.h
libNeonDomain/tests/domain-map/src/: map.h  (+3 more)
libNeonDomain/tests/domain-neighbour-globalIdx/: CMakeLists.txt
libNeonDomain/tests/domain-space-filling-curves/: CMakeLists.txt
libNeonDomain/tests/domain-stencil/: CMakeLists.txt
libNeonDomain/tests/domain-unit-test-cast/: CMakeLists.txt
libNeonDomain/tests/domain-unit-test-containers/: CMakeLists.txt
libNeonDomain/tests/domain-unit-test-eGrid/: CMakeLists.txt
libNeonDomain/tests/domain-unit-test-gridInterface/: CMakeLists.txt
libNeonDomain/tests/domain-unit-test-patterns-containers/: CMakeLists.txt
libNeonDomain/tests/domain-unit-test-staggered-grid/: CMakeLists.txt
libNeonDomain/tests/domainUt_sGrid/: CMakeLists.txt
libNeonDomain/tests/domainUt_swap/: CMakeLists.txt
libNeonDomain/tests/gUt_dataView_patterns/: CMakeLists.txt
libNeonDomain/tests/gUt_mGrid/: CMakeLists.txt
libNeonDomain/tests/gUt_periodic/: _CMakeLists.txt
libNeonDomain/tests/gUt_tools/: CMakeLists.txt
libNeonDomain/tests/gUt_vtk/: CMakeLists.txt
libNeonDomain/tests/unit/: CMakeLists.txt
libNeonPy/: CMakeLists.txt
libNeonSet/: CMakeLists.txt
libNeonSet/src/set/: Backend.cpp  BlockConfig.cpp  Containter.cpp  DataConfig.cpp  DevSet.cpp  ExecutionThreadSpan.cpp  GpuEventSet.cpp  GpuStream.cpp  HuOptions.cpp  KernelConfig.cpp  LaunchInfoSet.cpp  LaunchParametersTable.cpp  MemoryOptions.cpp  Runtime.cpp  StencilSemantic.cpp  Transfer.cpp  TransferMode.cpp  TransferSemantic.cpp
libNeonSet/tests/unit/: CMakeLists.txt
libNeonSkeleton/: CMakeLists.txt
libNeonSkeleton/src/skeleton/: Executor.cpp  Occ.cpp  Options.cpp  Skeleton.cpp
libNeonSkeleton/tests/: CMakeLists.txt
libNeonSkeleton/tests/perf/: CMakeLists.txt
libNeonSkeleton/tests/unit/: CMakeLists.txt
libNeonSolver/: CMakeLists.txt
libNeonSolver/tests/: CMakeLists.txt
libNeonSolver/tests/perf/: CMakeLists.txt
libNeonSolver/tests/poisson/: CMakeLists.txt
libNeonSolver/tests/unit/: CMakeLists.txt
libNeonSys/: CMakeLists.txt
libNeonSys/include/Neon/: Neon.h  Report.h
libNeonSys/src/sys/: Neon.cpp  Report.cpp
libNeonSys/tests/unit/: CMakeLists.txt
tutorials/introduction/domainLevel/: CMakeLists.txt  domainLevel.cpp  expandLevelSet.cu  expandLevelSet.h  grad.cu
tutorials/staggered-grids/: CMakeLists.txt
tutorials/staggered-grids/src/: containers.cu  containers.h  staggeredGrid.cpp
(+1243 files in other folders)
