cmake_minimum_required(VERSION 3.19 FATAL_ERROR)

add_subdirectory("domainUt_sGrid")
add_subdirectory("domain-unit-test-containers")
add_subdirectory("domain-unit-test-map")
add_subdirectory("domain-unit-test-globalIdx")
add_subdirectory("domain-unit-test-gridInterface")
add_subdirectory("domain-unit-test-halos")
add_subdirectory("domain-unit-test-stencil")
add_subdirectory("domain-unit-test-cast")
add_subdirectory("domain-unit-test-patterns-containers")

add_subdirectory("gUt_dataView_patterns")
add_subdirectory("domainUt_swap")
add_subdirectory("domain-unit-test-staggered-grid")
add_subdirectory("gUt_tools")
add_subdirectory("gUt_vtk")
add_subdirectory("gUt_bGrid")
add_subdirectory("gUt_mGrid")

